--- a/Livraria.Business/Livraria.Business.csproj
+++ b/Livraria.Business/Livraria.Business.csproj
@@ -43,6 +43,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuthorService.cs" />
     <Compile Include="Services\BookService.cs" />
+    <Compile Include="Services\CategoryService.cs" />
+    <Compile Include="Services\PublisherService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Livraria.Common\Livraria.Common.csproj">
