--- a/Livraria.Api/packages.config
+++ b/Livraria.Api/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net471" />
+  <package id="Ionic.Zlib" version="1.9.1.5" targetFramework="net471" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net471" />
@@ -12,5 +13,6 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net471" />
   <package id="Owin" version="1.0" targetFramework="net471" />
+  <package id="Strathweb.CacheOutput.WebApi2" version="0.11.0" targetFramework="net471" />
   <package id="Unity" version="5.8.5" targetFramework="net471" />
 </packages>
